--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -5,7 +5,7 @@ version = "0.0.1"
 tagline = "Apply font kerning to a text object's body"
 maintainer = "Natasha Brown <natasha@bookflyers.com>"
 type = "add-on"
-tags = ["3D View"]
+tags = ["Object"]
 blender_version_min = "4.2.0"
 license = ["SPDX:GPL-3.0-or-later"]
 copyright = ["2025 Bookflyers Ltd"]
