--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -2,7 +2,7 @@ schema_version = "1.0.0"
 id = "auto_kerning"
 name = "Auto Kerning"
 version = "0.0.1"
-tagline = "Apply font kerning to a text object's body"
+tagline = "Automatic kerning for text objects"
 maintainer = "Natasha Brown <natasha@bookflyers.com>"
 type = "add-on"
 tags = ["Object"]
